# haskell-test

./: Dockerfile  fetch.hs  hask.cabal
app/: Main.hs
